# bili-live-monitor

./: .gitignore  Cargo.toml
.github/workflows/: build.yaml  build.yml  build_and_test.yaml  build_crawler_docker_image.yml  deploy_frontend.yml  manage_cookies.yml
crawler/: Cargo.toml  Dockerfile
crawler/src/: lib.rs  storage.rs  utils.rs
danmu_client/: Cargo.toml
danmu_client/examples/: danmu.rs  one.rs
danmu_client/src/: danmu.rs  lib.rs
frontend/: Cargo.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: application-layout.tsx  layout.tsx  page.tsx
frontend/app/[room_id]/: page.tsx
frontend/app/block_user/: page.tsx
frontend/app/checker/: page.tsx
frontend/app/checker/[uid]/: page.tsx
frontend/app/statistics/: page.tsx
frontend/components/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  danmu_chart.tsx  danmu_people_chart.tsx  description-list.tsx  dialog.tsx  dropdown.tsx  fieldset.tsx  heading.tsx  input.tsx  link.tsx  listbox.tsx  loading.tsx  navbar.tsx  pagination.tsx  radio.tsx  sc_worth_chart.tsx  select.tsx  sidebar-layout.tsx  sidebar.tsx  stacked-layout.tsx  stat.tsx  switch.tsx  table.tsx  text.tsx  textarea.tsx
frontend/components/chart/: danmu_chart.tsx
frontend/components/func/: DataTable.tsx  sidebar.tsx
frontend/context/: RoomContext.tsx  ThemeContext.tsx
frontend/data/: streamers.tsx
frontend/src/: app.rs  main.rs
frontend/utils/: utils.tsx
model/: Cargo.toml
model/src/: statistics.rs
parse/: Cargo.toml
parse/src/: lib.rs
queryer/: Cargo.toml
queryer/src/: lib.rs
service/: Cargo.toml  Dockerfile  http-client.env.json  service.http
service/src/: api.rs  error.rs  main.rs  model.rs
statistics/: Cargo.toml  Dockerfile  cron.yaml
statistics/src/: main.rs
utils/: Cargo.toml
utils/src/: utils.rs
