[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "0.10.2", features = ["bundled"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
parse = {path = "../parse"}
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"

[dev-dependencies]
chrono = "0.4.38"
