[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.0.0", features = ["bundled", "r2d2"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
parse = {path = "../parse"}
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
danmu_client = {path = "../danmu_client"}
chrono = "0.4.38"
utils = {path = "../utils"}
openssl-sys = "0.9.102"
