[package]
name = "danmu_client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
futures-util = { version = "0.3.30", features = ["sink"]  }
parse = {path = "../parse"}
log = "0.4.21"
anyhow = { version = "1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
cookie = "0.18"

[dev-dependencies]
owo-colors = { version = "3.5.0" }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"