[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.0.0", features = ["bundled"]}
anyhow = { version = "1.0.86", features = ["backtrace"] }
parse = { path = "../parse" }
utils = { path = "../utils" }
log = "0.4.21"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"